--- a/styles.css
+++ b/styles.css
@@ -25,7 +25,8 @@ body {
     background: url(/images/bg-pattern-top.svg),
         url(/images/bg-pattern-bottom.svg);
     background-repeat: no-repeat no-repeat;
-    background-position: right 52w bottom 35vh, left 48vw top 52vh;
+    background-position: right 52vw bottom 35vh, left 48vw top 52vh;
+    background-clip: border-box;
     background-color: var(--dark-cyan);
     width: 100vw;
     max-width: 144rem;
@@ -123,7 +124,6 @@ justify-content: center;
 @media (max-width:460px){  
     .container{
         width: 90vw !important
-        /* height: 62vh; */
     }
 }
 @media (max-width:380px){
